Fixed pluralizing of '1 new replies' on top of post jump link. Added extra markup for the post header area. (Theme changes: advf-forum-post.tpl.php - Added div.forum-post-header) #253155 Changed _is_forum() to advanced_forum_treat_as_forum_post() to comply with coding standards and clarify purpose. #253155 Changed _topic_nid() to _advanced_forum_topic_nid(). #246701 IE 6 fixes. Thanks, CompShack. (Theme changes: Affects both .css files)

--- a/themes/advforum/advanced_forum-structure.css
+++ b/themes/advforum/advanced_forum-structure.css
@@ -202,7 +202,7 @@ padding-bottom: .2em;
 }
 
 .innertube{
-  margin: 10px 7px 10px 13px; 
+  margin: 10px 7px 10px 9px;
 }
 
 .forum-comment .links {
